// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table align column should not override cell style 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="ant-table ant-table-default ant-table-scroll-position-left">
        <!---->
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"><!----></span>
          </div></span>
          <!---->
          </th>
          <th style="text-align: center;" class="ant-table-align-center ant-table-row-cell-last"><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"><!----></span>
        </div></span>
        <!---->
        </th>
        </tr>
        </thead>
        <tbody class="ant-table-tbody">
          <tr class="ant-table-row ant-table-row-level-0" data-row-key="1">
            <td class="">
              <!---->
              <!---->
              <!---->
            </td>
            <td class="" style="text-align: center; color: red;">
              <!---->
              <!---->32
            </td>
          </tr>
          <tr class="ant-table-row ant-table-row-level-0" data-row-key="2">
            <td class="">
              <!---->
              <!---->
              <!---->
            </td>
            <td class="" style="text-align: center; color: red;">
              <!---->
              <!---->42
            </td>
          </tr>
        </tbody>
        </table>
      </div>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
</div>
</div>
`;

exports[`Table renders JSX correctly 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="ant-table ant-table-default ant-table-scroll-position-left">
        <!---->
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th colspan="2" class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"><!----></span>
          </div></span>
          <!---->
          </th>
          <th rowspan="2" class="ant-table-row-cell-last"><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"><!----></span>
        </div></span>
        <!---->
        </th>
        </tr>
        <tr>
          <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">First Name</span><span class="ant-table-column-sorter"><!----></span>
      </div></span>
      <!---->
      </th>
      <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Last Name</span><span class="ant-table-column-sorter"><!----></span>
    </div></span>
    <!---->
    </th>
    </tr>
    </thead>
    <tbody class="ant-table-tbody">
      <tr class="ant-table-row ant-table-row-level-0" data-row-key="1">
        <td class="">
          <!---->
          <!---->John
        </td>
        <td class="">
          <!---->
          <!---->Brown
        </td>
        <td class="">
          <!---->
          <!---->32
        </td>
      </tr>
      <tr class="ant-table-row ant-table-row-level-0" data-row-key="2">
        <td class="">
          <!---->
          <!---->Jim
        </td>
        <td class="">
          <!---->
          <!---->Green
        </td>
        <td class="">
          <!---->
          <!---->42
        </td>
      </tr>
    </tbody>
    </table>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
</div>
</div>
</div>
</div>
`;
